Made changes to the height of the background image to 500px to remove white space.

--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -79,6 +79,7 @@
 @media only screen and (max-width: 560px) {
     .SearchBar {
         background-image: url('https://s3.amazonaws.com/codecademy-content/programs/react/ravenous/background_search_mobile.jpg');
+        height: 500px;
     }
 
     .SearchBar-sort-options ul {
