Added href to business name to go to yelp page for more info. Added style to link.

--- a/src/components/Business/Business.css
+++ b/src/components/Business/Business.css
@@ -11,6 +11,11 @@
     margin-bottom: 1rem;
 }
 
+.business-links {
+    text-decoration: none;
+    color: black;
+}
+
 .Business h2 {
     margin-bottom: .5rem;
     font-size: 1.2rem;
