Added price symbol next to rating.  Added style to price.  Added media query for text-decortation to show underline at 500px and less.

--- a/src/components/Business/Business.css
+++ b/src/components/Business/Business.css
@@ -56,7 +56,19 @@
     margin: 0;
 }
 
-.Business-reviews .rating {
+.Business-reviews .rating, .Business-reviews .price {
+    display: inline;
     font-size: .88rem;
     line-height: 1rem;
 }
+
+.Business-reviews .price {
+    color: black;
+}
+
+@media only screen and (max-width: 500px) {
+    .business-links {
+        text-decoration: underline;
+    }
+}
+
